# thanosipsum-doc

./: .gitignore  .readthedocs.yaml  README.md  api_reference.rst  conf.py  index.rst  installation.rst  introduction.rst  pyproject.toml  usage.rst
