[project]
name = "ThanosipsumDocumentation"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "jeremiah igrami", email = "jegrami.dev@gmail.com"},
]
dependencies = ["sphinx>=7.4.7", "furo>=2024.8.6"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
